--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css"> -->
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
@@ -11,11 +11,12 @@
   <body>
     <form id="formOne">
       <div class="form-group">
+        <label for="ans1">Which kind of place would you prefer to work for?</label>
         <select class="form-control" id="ans1">
-          <option value="1">A</option>
-          <option value="2">B</option>
-          <option value="3">C</option>
-          <option value="4">D</option>
+          <option value="1">Large Company</option>
+          <option value="2">Enterprise level company</option>
+          <option value="3">Goverment</option>
+          <option value="4">Start up</option>
         </select>
         <select class="form-control" id="ans2">
           <option value="1">A</option>
@@ -50,7 +51,7 @@
       </div>
       <button type="submit" class="btn">Show me my character</button>
     </form>
-    <p>Your suggest track is:</p>
+    <p>Your suggested track is:</p>
 
   </body>
 </html>
