--- a/index.html
+++ b/index.html
@@ -6,52 +6,59 @@
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
-    <title>quiz</title>
+    <title>Track Suggestions</title>
   </head>
   <body>
-    <form id="formOne">
-      <div class="form-group">
-        <label for="ans1">Which kind of place would you prefer to work for?</label>
-        <select class="form-control" id="ans1">
-          <option value="1">Large Company</option>
-          <option value="2">Enterprise level company</option>
-          <option value="3">Goverment</option>
-          <option value="4">Start up</option>
-        </select>
-        <select class="form-control" id="ans2">
-          <option value="1">A</option>
-          <option value="2">B</option>
-          <option value="3">C</option>
-          <option value="4">D</option>
-        </select>
-        <select class="form-control" id="ans3">
-          <option value="1">A</option>
-          <option value="2">B</option>
-          <option value="3">C</option>
-          <option value="4">D</option>
-        </select>
-        <select class="form-control" id="ans4">
-          <option value="1">A</option>
-          <option value="2">B</option>
-          <option value="3">C</option>
-          <option value="4">D</option>
-        </select>
-        <select class="form-control" id="ans5">
-          <option value="1">A</option>
-          <option value="2">B</option>
-          <option value="3">C</option>
-          <option value="4">D</option>
-        </select>
-        <select class="form-control" id="ans6">
-          <option value="1">A</option>
-          <option value="2">B</option>
-          <option value="3">C</option>
-          <option value="4">D</option>
-        </select>
-      </div>
-      <button type="submit" class="btn">Show me my character</button>
-    </form>
+    <div class ="container">
+      <form id="formOne">
+        <div class="form-group">
+          <label for="ans1">Which kind of place would you prefer to work for?</label>
+          <select class="form-control" id="ans1">
+            <option value="1">Large Company</option>
+            <option value="2">Enterprise level company</option>
+            <option value="3">Goverment</option>
+            <option value="4">Start up</option>
+          </select>
+          <label for="ans2">Which kind of place would you prefer to work for?</label>
+          <select class="form-control" id="ans2">
+            <option value="1">A</option>
+            <option value="2">B</option>
+            <option value="3">C</option>
+            <option value="4">D</option>
+          </select>
+          <label for="ans3">Which kind of place would you prefer to work for?</label>
+          <select class="form-control" id="ans3">
+            <option value="1">A</option>
+            <option value="2">B</option>
+            <option value="3">C</option>
+            <option value="4">D</option>
+          </select>
+          <label for="ans4">Which kind of place would you prefer to work for?</label>
+          <select class="form-control" id="ans4">
+            <option value="1">A</option>
+            <option value="2">B</option>
+            <option value="3">C</option>
+            <option value="4">D</option>
+          </select>
+          <label for="ans5">Which kind of place would you prefer to work for?</label>
+          <select class="form-control" id="ans5">
+            <option value="1">A</option>
+            <option value="2">B</option>
+            <option value="3">C</option>
+            <option value="4">D</option>
+          </select>
+          <label for="ans6">Which kind of place would you prefer to work for?</label>
+          <select class="form-control" id="ans6">
+            <option value="1">A</option>
+            <option value="2">B</option>
+            <option value="3">C</option>
+            <option value="4">D</option>
+          </select>
+        </div>
+        <button type="submit" class="btn">Suggest a track for me</button>
+      </form>
     <p>Your suggested track is:</p>
+  </div>
 
   </body>
 </html>
