Add more questions

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <option value="3">Goverment</option>
             <option value="4">Start up</option>
           </select>
-          <label for="ans2">Which kind of place would you prefer to work for?</label>
+          <label for="ans2">What kind of software would you prefer to work on?</label>
           <select class="form-control" id="ans2">
-            <option value="1">A</option>
-            <option value="2">B</option>
-            <option value="3">C</option>
-            <option value="4">D</option>
+            <option value="1">Business</option>
+            <option value="2">Android</option>
+            <option value="3">Diverse</option>
+            <option value="4">I don't care as long as the work is quick</option>
           </select>
           <label for="ans3">Which kind of place would you prefer to work for?</label>
           <select class="form-control" id="ans3">
@@ -40,19 +40,19 @@
             <option value="3">C</option>
             <option value="4">D</option>
           </select>
-          <label for="ans5">Which kind of place would you prefer to work for?</label>
+          <label for="ans5">Which color appeals most to you?</label>
           <select class="form-control" id="ans5">
-            <option value="1">A</option>
-            <option value="2">B</option>
-            <option value="3">C</option>
-            <option value="4">D</option>
+            <option value="1">Purple</option>
+            <option value="2">White</option>
+            <option value="3">Blue</option>
+            <option value="4">Red</option>
           </select>
-          <label for="ans6">Which kind of place would you prefer to work for?</label>
+          <label for="ans6">Which of these letters do you like best?</label>
           <select class="form-control" id="ans6">
-            <option value="1">A</option>
-            <option value="2">B</option>
-            <option value="3">C</option>
-            <option value="4">D</option>
+            <option value="1">C</option>
+            <option value="2">J</option>
+            <option value="3">P</option>
+            <option value="4">R</option>
           </select>
         </div>
         <button type="submit" class="btn">Suggest a track for me</button>
