add rough draft for last questions

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <option value="3">Diverse</option>
             <option value="4">I don't care as long as the work is quick</option>
           </select>
-          <label for="ans3">Which kind of place would you prefer to work for?</label>
+          <label for="ans3">How popular do you want the language to be?</label>
           <select class="form-control" id="ans3">
-            <option value="1">A</option>
-            <option value="2">B</option>
-            <option value="3">C</option>
-            <option value="4">D</option>
+            <option value="1">Pretty popular</option>
+            <option value="2">The most popular</option>
+            <option value="3">Popular by virtue of being grandfathered in</option>
+            <option value="4">Too new to be popular</option>
           </select>
-          <label for="ans4">Which kind of place would you prefer to work for?</label>
+          <label for="ans4">Just pick one</label>
           <select class="form-control" id="ans4">
             <option value="1">A</option>
             <option value="2">B</option>
