Add take the quiz again button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <button type="submit" class="btn">Suggest a track for me</button>
       </form>
     <p>Your suggested track is:</p>
+    <button class="hidden">Take the quiz again</button>
   </div>
 
   </body>
