Add color changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <select class="form-control" id="ans3">
             <option value="1">Pretty popular</option>
             <option value="2">The most popular</option>
-            <option value="3">Popular by virtue of being grandfathered in</option>
+            <option value="3">Starting to fade</option>
             <option value="4">Too new to be that popular</option>
           </select>
           <label for="ans4">Just pick one</label>
