--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
         <img src="img/ruby.jpg" alt="logo for ruby">
         <p>Ruby is a favorite language of developers building interactive web applications. If an app involves users creating accounts, entering information, and interacting with dynamic content, there's a good chance it is built with Ruby. Ruby became popular because the Rails framework, which is written with Ruby, simplified many of the common tasks associated with building web applications. It's most popular with startups and smaller companies who are looking to build their product quickly.</p>
       </div>
+      <div class="well hidden tie">
+        <img src="img/tie.jpg" alt="I don't know">
+        <p>You don't seem to know what you want, as this quiz is extremely accurate. I'd suggest you take it again, but should you refuse your closest matches were:<br><br></p>
+      </div>
       <button class="hidden">Take the quiz again</button>
     </div>
   </body>
