Fix previously missed bug

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="well hidden tie">
         <img src="img/tie.jpg" alt="I don't know">
-        <p>You don't seem to know what you want, as this quiz is extremely accurate. I'd suggest you take it again, but should you refuse your closest matches were:<br><br></p>
+        <p>You don't seem to know what you want, as this quiz is extremely accurate. I'd suggest you take it again, but should you refuse your closest matches were:<br><br><span class="hidden" id="c">C#<br></span><span class="hidden" id="j">Java<br></span><span class="hidden" id="p">PHP<br></span><span class="hidden" id="r">Ruby<br></span></p>
       </div>
       <button class="hidden">Take the quiz again</button>
     </div>
